# oj

./: README.md  hello.py  pyproject.toml
.github/workflows/: format.yml  pypi.yml  test.yml
onlinejudge_command/: main.py
onlinejudge_command/subcommand/: generate_input.py  generate_output.py
tests/: command_test.py
