[project]
name = "online-judge-tools"
version = "12.0.0"
description = "CLI tool to solve problems of competitive programming"
authors = [
    { name = "Kimiyuki Onaka", email = "kimiyuki95@gmail.com" }
]
dependencies = [
    "colorama>=0.3, <1",
    "online-judge-api-client>=10.9.0, <11",
    "packaging>=24",
    "requests>=2, <3",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
scripts = { oj = "onlinejudge_command.main:main" }

[project.optional-dependencies]
selenium = [
    "selenium>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "mypy>=1.12.0",
    "pylint>=3.3.1",
    "yapf>=0.40.2",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/online_judge_tools"]
