[project]
name = "online-judge-tools"
version = "12.0.0"
description = "CLI tool to solve problems of competitive programming"
authors = [
    { name = "Kimiyuki Onaka", email = "kimiyuki95@gmail.com" }
]
dependencies = [
    "colorama>=0.3, <1",
    "online-judge-api-client>=10.9.0, <11",
    "packaging>=24",
    "requests>=2, <3",
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
scripts = { oj = "onlinejudge_command.main:main" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities"
]

[project.optional-dependencies]
selenium = [
    "selenium>=4.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "isort>=5.13.2",
    "mypy>=1.12.0",
    "pylint>=3.3.1",
    "yapf>=0.40.2",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["onlinejudge_command"]

[tool.isort]
line_length = 9999
default_section = "THIRDPARTY"
known_first_party = ["onlinejudge"]

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
# run: $ pylint --rcfile=setup.cfg modules_or_packages
disable = [
    "broad-except",
    "consider-using-enumerate",
    "consider-using-f-string", # TODO: remove this
    "consider-using-with", # TODO: remove this
    "duplicate-code",
    "fixme",
    "invalid-name",
    "line-too-long",
    "logging-not-lazy", # TODO: remove this. logging-not-lazy should not be disabled if possible.
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-break",
    "no-else-raise",
    "no-else-return",
    "no-member",
    "redefined-builtin",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-boolean-expressions",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unnecessary-lambda-assignment", # TODO: remove this
    "unspecified-encoding", # TODO: remove this
    "unused-argument",
    "unused-wildcard-import",
    "wildcard-import",
    "wrong-import-order",
]

[tool.yapf]
column_limit = 9999
